--- a/Proj1.vcxproj.filters
+++ b/Proj1.vcxproj.filters
@@ -40,5 +40,14 @@
     <ClInclude Include="enemyVector.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="gui.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="background.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="game.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
