--- a/Proj1.vcxproj.filters
+++ b/Proj1.vcxproj.filters
@@ -49,5 +49,8 @@
     <ClInclude Include="game.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="playerUpgrades.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
